[project]
name = "auto-tunel"
version = "0.1.0"
description = ""
authors = [
    {name = "wittcher1",email = "gabriel094x@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "midiutil (>=1.2.1,<2.0.0)",
    "simpleaudio (>=1.0.4,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "scipy (>=1.16.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
